<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="spaceship_title">Spaceship</string>
    <string name="spaceship_summary">Absolutely Stunning</string>
    <string name="disabled">Disabled</string>
    <string name="enabled">Enabled</string>
    <string name="advanced">Advanced</string>
    <string name="add">Add</string>
    <string name="choose_app">Choose app</string>
	<string name="statusbar_title">Status Bar</string>
    <string name="statusbar_summary">Network traffic, battery, icons</string>
	<string name="buttons_title">Buttons</string>
    <string name="buttons_summary">Volume Key, hardware buttons etc.</string>
	<string name="gestures_title">Gestures</string>
    <string name="gestures_summary">Wake, sleep etc</string>
	<string name="lockscreen_title">Lock Screen</string>
    <string name="lockscreen_summary">Weather, Charging, Artwork</string>
	<string name="powermenu_title">Power Menu</string>
    <string name="powermenu_summary">Advanced Reboot, Flashlight</string>
	<string name="notification_title">Notifications</string>
    <string name="notification_summary">Heads up, charging light etc.</string>
	<string name="misc_title">Miscellaneous</string>
    <string name="misc_summary">Extra goodies</string>
    <string name="ok">OK</string>
    <string name="reset">Reset</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="dialog_color_picker">Color Picker</string>
    <string name="press_color_to_apply">Press on color below to apply</string>
    <string name="arrow_right">→</string>
    <string name="arrow_down">↓</string>
    <string name="hex">Hex:</string>
    <string name="hex_hint">#ff000000</string>
    <string name="set">Set</string>
    <string name="color_default">Default</string>
    <string name="status_bar_title">Status bar</string>
    <string name="status_bar_quick_qs_pulldown_title">Quick pulldown</string>
    <string name="status_bar_quick_qs_pulldown_summary">%1$s edge of the status bar pulls down Quick Settings</string>
    <string name="status_bar_quick_qs_pulldown_summary_left">Left</string>
    <string name="status_bar_quick_qs_pulldown_summary_right">Right</string>
    <string name="status_bar_quick_qs_pulldown_off">Off</string>
    <string name="status_bar_quick_qs_pulldown_left">Left</string>
    <string name="status_bar_quick_qs_pulldown_right">Right</string>
    <string name="status_bar_double_tap_to_sleep_title">Double-tap to sleep</string>
    <string name="status_bar_double_tap_to_sleep_summary">Double-tap on the status bar to turn off the display</string>
    <string name="status_bar_icons_title">Status bar icons</string>
    <string name="status_bar_notif_count_title">Show notification count</string>
    <string name="status_bar_notif_count_summary">Display the number of pending notifications</string>
    <string name="status_bar_system_icons_title">System icons</string>
    <string name="status_bar_system_icons_summary">Control which status bar icons are shown</string>
    <string name="show_fourg_icon_title">4G icon</string>
    <string name="show_fourg_icon_summary">Display 4G icon in signal icon instead LTE</string>
    <string name="status_bar_clock_title">Clock</string>
    <string name="status_bar_clock_show_seconds_title">Show seconds</string>
    <string name="status_bar_clock_show_seconds_summary">Show hours, minutes, and seconds</string>
    <string name="status_bar_clock_position_title">Clock position</string>
    <string name="status_bar_clock_position_right">Right</string>
    <string name="status_bar_clock_position_left">Left</string>
    <string name="status_bar_clock_position_center">Center</string>
    <string name="status_bar_am_pm_title">AM/PM style</string>
    <string name="status_bar_am_pm_info">24-hour clock is enabled</string>
    <string name="status_bar_am_pm_normal">Normal</string>
    <string name="status_bar_am_pm_small">Small</string>
    <string name="status_bar_am_pm_hidden">Hidden</string>
    <string name="status_bar_battery_title">Battery indicator</string>
    <string name="status_bar_battery_style_title">Battery status style</string>
    <string name="status_bar_battery_style_icon_portrait">Icon portrait</string>
    <string name="status_bar_battery_style_circle">Circle</string>
    <string name="status_bar_battery_style_text">Text</string>
    <string name="status_bar_battery_percentage_title">Battery percentage</string>
    <string name="status_bar_battery_percentage_default">Hidden</string>
    <string name="status_bar_battery_percentage_text_inside">Inside the icon</string>
    <string name="status_bar_battery_percentage_text_next">Next to the icon</string>
    <string name="status_bar_brightness_category">Brightness</string>
    <string name="status_bar_brightness_slider_title">Brightness slider</string>
    <string name="status_bar_brightness_slider_summary">Adjust brightness from the Quick Settings</string>
    <string name="status_bar_brightness_slider_auto_title">Auto brightness</string>
    <string name="status_bar_brightness_slider_auto_summary">Show toggle for adaptive brightness near the slider</string>
    <string name="status_bar_toggle_brightness">Brightness control</string>
    <string name="status_bar_toggle_brightness_summary">Adjust brightness by sliding across the status bar</string>
    <string name="network_traffic_settings_title">Network traffic monitor</string>
    <string name="network_traffic_settings_summary">Show current network traffic levels in the status bar</string>
    <string name="network_traffic_mode_title">Display mode</string>
    <string name="network_traffic_mode_disable">Disabled</string>
    <string name="network_traffic_mode_up">Upload only</string>
    <string name="network_traffic_mode_down">Download only</string>
    <string name="network_traffic_mode_all">Upload and download</string>
    <string name="network_traffic_autohide">Auto hide</string>
    <string name="network_traffic_autohide_summary">Hide the traffic monitor when there is no activity</string>
    <string name="network_traffic_units_title">Traffic measurement units</string>
    <string name="network_traffic_units_kilobits">Kilobits per second (kb/s)</string>
    <string name="network_traffic_units_megabits">Megabits per second (Mb/s)</string>
    <string name="network_traffic_units_kilobytes">Kilobytes per second (kB/s)</string>
    <string name="network_traffic_units_megabytes">Megabytes per second (MB/s)</string>
    <string name="network_traffic_show_units">Show units</string>
    <string name="network_traffic_show_units_summary">Whether to show traffic measurement units in the statusbar</string>
    <string name="network_traffic_disabled_clock">Network traffic disabled due to clock position</string>
    <string name="anbi_title">Accidental touch</string>
    <string name="anbi_summary">Prevent interaction with navigation buttons while the screen is being touched</string>
    <string name="hardware_keys_power_key_title">Power button</string>
    <string name="hardware_keys_home_key_title">Home button</string>
    <string name="hardware_keys_back_key_title">Back button</string>
    <string name="hardware_keys_menu_key_title">Menu button</string>
    <string name="hardware_keys_assist_key_title">Search button</string>
    <string name="hardware_keys_appswitch_key_title">Recents button</string>
    <string name="hardware_keys_camera_key_title">Camera button</string>
    <string name="hardware_keys_volume_keys_title">Volume buttons</string>
    <string name="hardware_keys_short_press_title">Short press action</string>
    <string name="hardware_keys_long_press_title">Long press action</string>
    <string name="hardware_keys_double_tap_title">Double tap action</string>
    <string name="hardware_keys_action_nothing">No action</string>
    <string name="hardware_keys_action_menu">Open/close menu</string>
    <string name="hardware_keys_action_app_switch">Recent apps switcher</string>
    <string name="hardware_keys_action_search">Search assistant</string>
    <string name="hardware_keys_action_voice_search">Voice search</string>
    <string name="hardware_keys_action_in_app_search">In-app search</string>
    <string name="hardware_keys_action_launch_camera">Launch camera</string>
    <string name="hardware_keys_action_sleep">Turn screen off</string>
    <string name="hardware_keys_action_last_app">Last app</string>
    <string name="hardware_keys_action_split_screen">Split screen</string>
    <string name="hardware_keys_action_single_handed_left">Single hand mode (left)</string>
    <string name="hardware_keys_action_single_handed_right">Single hand mode (right)</string>
    <string name="camera_sleep_on_release_title">Screen peek</string>
    <string name="camera_sleep_on_release_summary">A half press will keep the screen on only while the button is held down</string>
    <string name="camera_launch_title">Launch camera</string>
    <string name="camera_launch_summary">A longpress and release will launch camera</string>
    <string name="volbtn_music_controls_title">Control playback</string>
    <string name="volbtn_music_controls_summary">Seek music tracks by long pressing the volume keys while the display is off</string>
    <string name="volbtn_cursor_control_title">Keyboard cursor control</string>
    <string name="volbtn_cursor_control_off">Disabled</string>
    <string name="volbtn_cursor_control_on">Volume up/down moves cursor left/right</string>
    <string name="volbtn_cursor_control_on_reverse">Volume up/down moves cursor right/left</string>
    <string name="power_end_call_title">End call</string>
    <string name="power_end_call_summary">End the current call by pressing the power button</string>
    <string name="swap_volume_buttons_title">Reorient</string>
    <string name="swap_volume_buttons_summary">Swap volume buttons when the screen is rotated</string>
    <string name="volume_panel_on_left_title">Show panel on left</string>
    <string name="volume_panel_on_left_summary">Display volume panel on the left side of the screen</string>
    <string name="button_wake_title">Wake device</string>
    <string name="volume_answer_call_title">Answer call</string>
    <string name="volume_answer_call_summary">Answer incoming calls by pressing the volume buttons</string>
    <string name="home_answer_call_title">Answer call</string>
    <string name="home_answer_call_summary">Answer incoming calls by pressing the home button</string>
    <string name="extras_title">Extras</string>
    <string name="additional_buttons_title">Additional buttons</string>
    <string name="button_backlight_title">Backlight</string>
    <string name="button_backlight_enabled">Illuminate buttons</string>
    <string name="button_backlight_only_when_pressed_title">Illuminate buttons only when pressed</string>
    <string name="keyboard_backlight_enabled">Illuminate keyboard</string>
    <string name="button_backlight_seekbar_title">Button brightness</string>
    <string name="keyboard_backlight_seekbar_title">Keyboard brightness</string>
    <string name="backlight_timeout_title">Illumination timeout</string>
    <string name="backlight_timeout_unlimited">Don\'t turn off</string>
    <string name="backlight_summary_disabled">Disabled</string>
	<string name="light_category_title">Light</string>
    <string name="battery_light_title">Bettery light</string>
    <string name="battery_light_summary">Configure battery light</string>
    <string name="notification_light_title">Notification light</string>
    <string name="notification_light_summary">Choosing colors automatically</string>
    <string name="incall_vibration_category">In-call vibration options</string>
    <string name="incall_vibrate_connect_title">Vibrate on connect</string>
    <string name="incall_vibrate_call_wait_title">Vibrate on call waiting</string>
    <string name="incall_vibrate_disconnect_title">Vibrate on disconnect</string>
</resources>