<?xml version="1.0" encoding="utf-8"?>
<!--
    Copyright © 2019 Cygnus Project
    Author: @alexxxdev <alexxxdev@ya.ru>
    Licensed under the Apache License, Version 2.0 (the "License");
    you may not use this file except in compliance with the License.
    You may obtain a copy of the License at
    http://www.apache.org/licenses/LICENSE-2.0
    Unless required by applicable law or agreed to in writing, software
    distributed under the License is distributed on an "AS IS" BASIS,
    WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
    See the License for the specific language governing permissions and
    limitations under the License.
-->

<PreferenceScreen 
	xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:title="@string/spaceship_title">

    <!-- Status Bar -->
        <com.cygnus.spaceship.preferences.SpaceshipPreference
        android:key="statusbar_category"
        android:title="@string/statusbar_title"
        android:summary="@string/statusbar_summary"
        android:fragment="com.cygnus.spaceship.fragments.StatusbarSettings"
        android:icon="@drawable/ic_settings_statusbar"/>

    <!-- Gestures -->
        <com.cygnus.spaceship.preferences.SpaceshipPreference
        android:key="gestures_category"
        android:title="@string/gestures_title"
        android:summary="@string/gestures_summary"
        android:fragment="com.cygnus.spaceship.fragments.GesturesSettings"
        android:icon="@drawable/ic_settings_gesture"/>

    <!-- Buttons -->
<!--    <com.cygnus.spaceship.preferences.SpaceshipPreference
        android:key="buttons_category"
        android:title="@string/buttons_title"
        android:summary="@string/buttons_summary"
        android:fragment="com.cygnus.spaceship.fragments.ButtonSettings"
        android:icon="@drawable/ic_settings_buttons"/> -->

    <!-- Lock Screen -->
    <com.cygnus.spaceship.preferences.SpaceshipPreference
        android:key="lockscreen_category"
        android:title="@string/lockscreen_title"
        android:summary="@string/lockscreen_summary"
        android:fragment="com.cygnus.spaceship.fragments.LockscreenSettings"
        android:icon="@drawable/ic_settings_lockscreen"/>
	
    <!-- Power Menu -->
    <!--<com.cygnus.spaceship.preferences.SpaceshipPreference
        android:key="powermenu_category"
        android:title="@string/powermenu_title"
        android:summary="@string/powermenu_summary"
        android:fragment="com.cygnus.spaceship.fragments.PowermenuSettings"
        android:icon="@drawable/ic_settings_powermenu"/> -->
	
    <!-- Notifications -->
   <!-- <com.cygnus.spaceship.preferences.SpaceshipPreference
        android:key="notification_category"
        android:title="@string/notification_title"
        android:summary="@string/notification_summary"
        android:fragment="com.cygnus.spaceship.fragments.NotificationSettings"
        android:icon="@drawable/ic_settings_notifications"/> -->

    <!-- Miscellaneous -->
    <com.cygnus.spaceship.preferences.SpaceshipPreference
        android:key="misc_category"
        android:title="@string/misc_title"
        android:summary="@string/misc_summary"
        android:fragment="com.cygnus.spaceship.fragments.MiscSettings"
        android:icon="@drawable/ic_settings_misc"/>

</PreferenceScreen>
